fix/header-preserve-state-and-custom-scrollbar

--- a/client/src/styles/app.css
+++ b/client/src/styles/app.css
@@ -6,7 +6,7 @@
 
 /* General */
 
-:root{
+:root {
   --pink: #eddfd6;
   --black: #222222;
   --primary-color: var(--pink);
@@ -15,7 +15,29 @@
   margin-right: 15%;
 }
 
-.unfitScreenSize{
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: var(--primary-color);
+  border-radius: 8px 0px 0px 8px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: var(--secondary-color);
+  border-radius: 8px 0px 0px 8px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: var(--secondary-color);
+  border-radius: 8px 0px 0px 8px;
+}
+
+.unfitScreenSize {
   width: 100%;
   height: 100vh;
   display: flex;
@@ -36,7 +58,6 @@ body {
 
 ul {
   padding-left: 0;
-
 }
 
 .logo {
@@ -52,7 +73,7 @@ ul {
   padding-left: 3em;
 }
 
-.lines{
+.lines {
   margin-bottom: 4%;
   margin-top: 2%;
 }
@@ -77,9 +98,9 @@ hr {
 }
 
 .top {
-  border:none;
-  border-top:1px solid var(--secondary-color);
-  height:1px;
+  border: none;
+  border-top: 1px solid var(--secondary-color);
+  height: 1px;
   align-items: center;
 }
 
@@ -106,15 +127,19 @@ button {
   font-size: larger;
 }
 
-button :hover{
+button :hover {
   background-color: var(--primary-color);
 }
 
 header {
   display: flex;
   justify-content: space-between;
-  align-items:center;
+  align-items: center;
   margin-top: 1em;
+}
+
+.header-ul {
+  padding: 4px 0px;
 }
 
 .hiring {
@@ -127,11 +152,11 @@ nav li {
 
 .nav-links {
   display: inline-block;
-  padding: 0px;
+  padding: 4px;
 }
 
-.nav-links  a {
-  color:var(--secondary-color);
+.nav-links a {
+  color: var(--secondary-color);
   text-decoration: none;
   padding-right: 5px;
   font-family: helvetica, sans-serif;
@@ -147,13 +172,14 @@ nav li {
   float: right;
   overflow: hidden;
   font-size: x-large;
+  padding: 4px;
 }
 
 .dropdown-content {
   display: none;
   background-color: var(--secondary-color);
   width: 11em;
-  border:solid 15px var(--secondary-color);
+  border: solid 15px var(--secondary-color);
   border-radius: 6px;
   position: fixed;
   margin-left: -10em;
@@ -167,7 +193,7 @@ nav li {
 .dropdown-content a {
   float: none;
   background-color: var(--primary-color);
-  color:var(--secondary-color);
+  color: var(--secondary-color);
   border-radius: 4px;
   padding: 6px 8px;
   margin-bottom: 5%;
@@ -210,21 +236,21 @@ nav li {
   padding-bottom: 3%;
 }
 
-.titles ul{
+.titles ul {
   position: relative;
   text-align: center;
-  align-items:center;
+  align-items: center;
   padding: 0px 0px;
   margin-top: 1%;
 }
 
 .game {
-    display: flex;
-    flex-wrap: wrap;
-    align-items:center;
-    padding-left: 10%;
-    padding-right: 10%;
-    margin-top: 2em;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  padding-left: 10%;
+  padding-right: 10%;
+  margin-top: 2em;
 }
 
 .content_img {
@@ -247,7 +273,7 @@ nav li {
   margin-left: 20%;
 }
 
-.content_img div{
+.content_img div {
   position: absolute;
 
   bottom: 1px;
@@ -261,23 +287,23 @@ nav li {
   font-family: Arial, Helvetica, sans-serif;
   opacity: 0;
   visibility: hidden;
-  -webkit-transition: visibility 0s, opacity 0.5s linear; 
+  -webkit-transition: visibility 0s, opacity 0.5s linear;
   transition: visibility 0s, opacity 0.5s linear;
 }
 
-.content_img img{
+.content_img img {
   width: 80px;
   height: 80px;
 }
 
-.content_img:hover{
+.content_img:hover {
   cursor: pointer;
 }
 
-.content_img:hover div{
+.content_img:hover div {
   width: 80px;
   visibility: visible;
-  opacity: 100; 
+  opacity: 100;
   border-radius: 6px;
 }
 
@@ -289,10 +315,10 @@ nav li {
   padding: 1% 0% 5% 0%;
 }
 
-.row2{
+.row2 {
   display: inline-flex;
   margin-left: 4%;
-  align-items:center;
+  align-items: center;
   padding-left: 50px;
   padding-right: 50px;
 }
@@ -319,7 +345,7 @@ footer {
 
 /* Boxes */
 
-.boxes{
+.boxes {
   padding: 20px 20px 20px 20px;
   border: 2px solid var(--secondary-color);
   width: 60%;
@@ -351,6 +377,7 @@ footer {
 
 .toggle {
   margin-right: 10px;
+  padding: 4px;
   appearance: none;
   vertical-align: middle;
   width: 60px;
@@ -380,7 +407,7 @@ footer {
   text-transform: uppercase;
   font-weight: bold;
   color: var(--primary-color);
-  box-shadow: 0 1px 2px rgba(0,0,0,0.2);
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
   transition: all cubic-bezier(0.3, 1.5, 0.7, 1) 0.3s;
 }
 
@@ -388,9 +415,7 @@ footer {
   left: 32px;
 }
 
-@media only screen and (max-width: 880px)
-
-{
+@media only screen and (max-width: 880px) {
   .dropdown {
     display: none;
   }
